--- a/config/config-heroku-template.json
+++ b/config/config-heroku-template.json
@@ -36,7 +36,7 @@
         "EnableMultifactorAuthentication": false,
         "EnforceMultifactorAuthentication": false,
         "EnableUserAccessTokens": false,
-        "AllowCorsFrom": "",
+        "AllowCorsFrom": "*",
         "CorsExposedHeaders": "",
         "CorsAllowCredentials": false,
         "CorsDebug": false,
